--- a/src/app/Componenets/shopitem/shopitem.component.css
+++ b/src/app/Componenets/shopitem/shopitem.component.css
@@ -1,195 +1,119 @@
-/* fonts  */
-@import url('https://fonts.googleapis.com/css?family=Abel|Aguafina+Script|Artifika|Athiti|Condiment|Dosis|Droid+Serif|Farsan|Gurajada|Josefin+Sans|Lato|Lora|Merriweather|Noto+Serif|Open+Sans+Condensed:300|Playfair+Display|Rasa|Sahitya|Share+Tech|Text+Me+One|Titillium+Web');
-
+html, 
 body {
-background: #DFC2F2;
-	background-image: linear-gradient( 135deg, #CE9FFC 10%, #7367F0 100%);
-	background-attachment: fixed;	
-	background-size: cover;
-	}
-
-#container{
-	box-shadow: 0 15px 30px 1px rgba(128, 128, 128, 0.31);
-	background: rgba(255, 255, 255, 0.90);
-	text-align: center;
-	border-radius: 5px;
-	overflow: hidden;
-	margin: 5em auto;
-	height: 350px;
-	width: 700px;
-	
+  width:100%;
+  min-height:100%; 
+  display:block;
+  padding:0; 
+  margin:0;
+  background-color:#f4f4f4;
+  font-family: 'Source Sans Pro', sans-serif;
+  
 }
 
-
-
-/* 	Product details  */
-.product-details {
-	position: relative;
-	text-align: left;
-	overflow: hidden;
-	padding: 30px;
-	height: 100%;
-	float: left;
-	width: 40%;
-
+*, *:before, *:after {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
-/* 	Product Name */
-#container .product-details h1{
-	font-family: 'Old Standard TT', serif;
-	display: inline-block;
-	position: relative;
-	font-size: 34px;
-	color: #344055;
-	margin: 0;
-	
+#wrapper { 
+  width:100%;
+  position:absolute; 
+  top:0; 
+  bottom:0; 
+  left:0; 
+  right:0;
+}
+#content {
+  width:100%;
+  height:50%; 
+  background-color:#feca16;
+  .list {
+    width:100%;
+    display:inline-block;
+    margin:180px 0;
+    text-align:center;
+  }
 }
 
-#container .product-details h1:before{
-	position: absolute;
-	content: '';
-	right: 0%; 
-	top: 0%;
-	transform: translate(25px, -15px);
-	font-family: 'Farsan', cursive;
-	display: inline-block;
-	background: #FFA69E;
-	border-radius: 5px;
-	font-size: 14px;
-	padding: 5px;
-	color: #FFF;
-	margin: 0;
-	animation: chan-sh 6s ease infinite;
+.product-card {
+  width:280px;
+  display:inline-block;
+  background-color:#fff;
+  position:relative;
+  z-index:20;
+  box-shadow:0 1px 11px 0 rgba(0,0,0,.1);
+  border-radius:2px;
+  margin-bottom:40px;
+  
+  -webkit-transition: all 250ms ease-out;
+	   -moz-transition: all 250ms ease-out;
+	    -ms-transition: all 250ms ease-out;
+	     -o-transition: all 250ms ease-out;
+	        transition: all 250ms ease-out;
+  cursor:pointer;
+  border-radius:0 10px 0 0;
+  span.tag {
+    position:absolute;
+    left:0px;
+    width:40px;
+    height:50px;
+    line-height:40px;
+    color:#fff;
+    font-size:14px;
+    &:after {
+      content: '';
+      position:absolute;
+      left:0;
+      z-index:-1;
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 60px 60px 0 0;
+      border-color: #264989 transparent transparent transparent
+    }
+    
+  }
+  h2 {
+    width:100%;
+    font-size:24px;
+    font-weight:700;
+    color:#323232;
+    padding:0px;
+    margin:30px 0 0 ;
+  }
+  h4 {
+    width:100%;
+    font-size:14px;
+    padding:0px;
+    margin:5px 0 0;
+    font-weight:300;
+    letter-spacing:4px;
+    color:#bbb;
+  }
+  figure {
+    width:100%;
+    display:inline-block;
+    margin:0px;
+    padding:0px;
+    img {
+      display:inline-block;
+      max-width:80%;
+      margin:30px 0;
+    }
+  }
+  .price {
+    width:100%;
+    margin-bottom:20px;
+    font-size:36px;
+    display:block;
+    color:#feca16;
+    font-weight:400;
+  }
+  
+  &:hover {
+    transform: scale(1.1);
+      box-shadow:0 1px 11px 0 rgba(0,0,0,.3);
 
+  }
 }
-
-
-@keyframes chan-sh {
-	from  {content: 'free shipping';}
-	to  {content: 'New';}
-	
-}
-
-/*Product Rating  */
-.hint-star {
-	display: inline-block;
-	margin-left: 0.5em;
-	color: gold;
-	width: 50%;
-}
-
-
-/* The most important information about the product */
-#container .product-details > p {
-	font-family: 'Farsan', cursive;
-	text-align: center;
-	font-size: 20px;
-	color: #7d7d7d;
-	
-}
-
-/* control */
-
-.control{
-	position: absolute;
-	bottom: 20%;
-	left: 22.8%;
-	
-}
-/* the Button */
-.btn {
-	transform: translateY(0px);
-	transition: 0.3s linear;
-	background: #49C608;
-	border-radius: 5px;
-  position: relative;
-  overflow: hidden;
-	cursor: pointer;
-	outline: none;
-	border: none;
-	color: #eee;
-	padding: 0;
-	margin: 0;
-	
-}
-
-.btn:hover{transform: translateY(-4px);}
-
-.btn span {
-	font-family: 'Farsan', cursive;
-	transition: transform 0.3s;
-	display: inline-block;
-  padding: 10px 20px;
-	font-size: 1.2em;
-	margin:0;
-	
-}
-/* shopping cart icon */
-.btn .price, .shopping-cart{
-	background: #333;
-	border: 0;
-	margin: 0;
-}
-
-.btn .price {
-	transform: translateX(-10%); padding-right: 15px;
-}
-
-/* the Icon */
-.btn .shopping-cart {
-	transform: translateX(-100%);
-  position: absolute;
-	background: #333;
-	z-index: 1;
-  left: 0;
-  top: 0;
-}
-
-/* buy */
-.btn .buy {z-index: 3; font-weight: bolder;}
-
-.btn:hover .price {transform: translateX(-110%);}
-
-.btn:hover .shopping-cart {transform: translateX(0%);}
-
-
-
-/* product image  */
-.product-image {
-	transition: all 0.3s ease-out;
-	display: inline-block;
-	position: relative;
-	overflow: hidden;
-	height: 100%;
-	float: right;
-	width: 50%;
-	display: inline-block;
-}
-
-#container img {width: 100%;height: 100%;}
-
-.info {
-    background: rgba(27, 26, 26, 0.9);
-    font-family: 'Farsan', cursive;
-    transition: all 0.3s ease-out;
-    transform: translateX(-100%);
-    position: absolute;
-    line-height: 1.9;
-    text-align: left;
-    font-size: 120%;
-    cursor: no-drop;
-    color: #FFF;
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
-}
-
-.info h2 {text-align: center}
-.product-image:hover .info{transform: translateX(0);}
-
-.info ul li{transition: 0.3s ease;}
-.info ul li:hover{transform: translateX(50px) scale(1.3);}
-
-.product-image:hover img {transition: all 0.3s ease-out;}
-.product-image:hover img {transform: scale(1.2, 1.2);}
